Yaml/K8s/Config_Default_Backend.yml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend # the default name
spec:
  selector:
    app: default-response-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
