Yaml/K8s/Loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: microservice-one
  ports:
  - protocol: TCP
    port: 3200
    targetPort: 3000
    nodePort: 30010
