Yaml/K8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx # service selects the deployment
  ports:
  - protocol: TCP
    port : 80
    targetPort: 8080 #This should match the container port
